--- a/contact.htm
+++ b/contact.htm
@@ -68,8 +68,8 @@ ul.topnav li.icon {display: none;}
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
 <img align="left" width="170" src="UVA-med-3.jpg">
-<img align="right" width="150" src="cphg_logo.jpg">
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;</font></a></h2>
+<!--<img align="right" width="150" src="cphg_logo.jpg">-->
+<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -117,7 +117,7 @@ function myFunction() {
 <iframe align="right" width="600" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=West+Complex,+Charlottesville,+VA+22903&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 <h3><font color="#002F6C">Mailing Address</font></h3>
 <p style="line-height: 1.6;">
-<a href="https://med.virginia.edu/cphg/" target="_blank" style="text-decoration:none;">Center for Public Health Genomics</a><br>
+<a href="https://med.virginia.edu/cphg/" target="_blank" style="text-decoration:none;">Department of Genome Sciences</a><br>
 <a href="https://www.virginia.edu/" target="_blank" style="text-decoration:none;">University of Virginia</a><br>
 P. O. Box 800717<br>
 Charlottesville, VA 22908<br>
@@ -135,16 +135,19 @@ Fax: 434-982-1815<br>
 Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>
 </p>
 <hr>
+<p>
+<img align="left" src="images/sunrise_grounds_ss_1_small.jpg" style="width:900px">
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></p>
+<hr>
 <h2 align="center"><font color="#002F6C">Affiliations</font></h2>
 <hr>
-<h4><a href="https://med.virginia.edu/cphg/" target="_blank" style="text-decoration:none;"><font color="#002F6C">Center for Public Health Genomics</font></a></h3>
-<h4><a href="https://med.virginia.edu/phs/" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Public Health Sciences</font></a></h3>
+<h4><a href="https://med.virginia.edu/cphg/" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Genome Sciences</font></a></h3>
 <h4><a href="https://bmg.med.virginia.edu/" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Biochemistry and Molecular Genetics</font></a></h3>
 <h4><a href="https://engineering.virginia.edu/departments/biomedical-engineering" target="_blank" style="text-decoration:none;"><font color="#002F6C">Department of Biomedical Engineering</font></a></h3>
 <h4><a href="https://uvahealth.com/services/cancer-research" target="_blank" style="text-decoration:none;"><font color="#002F6C">UVA Cancer Center</font></a></h3>
 <h4><a href="https://datascience.virginia.edu/" target="_blank" style="text-decoration:none;"><font color="#002F6C">School of Data Science</font></a></h3>
 <hr>
-<p align="right">Last modified: November 25, 2020</p>
+<p align="right">Last modified: July 24, 2024</p>
 </div>
 
 </body></html>
