--- a/research.htm
+++ b/research.htm
@@ -99,8 +99,8 @@ ul.topnav li.icon {display: none;}
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
 <img align="left" width="170" src="UVA-med-3.jpg">
-<img align="right" width="150" src="cphg_logo.jpg">
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;</font></a></h2>
+<!--<img align="right" width="150" src="cphg_logo.jpg">-->
+<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -204,7 +204,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 <li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
 <li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Wang</font></a>, Department of Genetics, Yale University</li>
 <li><a href="https://hmh-cdi.org/en/Research/Faculty/Hai-Hui-Xue" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
-<li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
+<li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's National Research Institute, Children’s National Hospital</li>
 </p></ul>
 <button type="button" class="collapsible">
 <p style="line-height: 1.6;">&nbsp;&nbsp;and many colleagues at UVA: (click to expand)
@@ -225,7 +225,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 <li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology</li>
 <li><a href="https://uvahealth.com/findadoctor/Agnieszka-Swiatecka-Urban-1497816045" target="_blank"><font color="#002F6C">Agnieszka Swiatecka-Urban</font></a>, Department of Pediatric Nephrology</li>
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science</li>
+<li><a href="https://www.cs.virginia.edu/~az9eg/website/lab.html" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science</li>
 <li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology</li>
 (in alphabetical order)
 </p></ul>
@@ -266,7 +266,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 </div>
 </div>
 <hr>
-<p align="right">Last modified: January 30, 2024</p>
+<p align="right">Last modified: July 24, 2024</p>
 
 </div>
 
