--- a/software.htm
+++ b/software.htm
@@ -68,8 +68,8 @@ ul.topnav li.icon {display: none;}
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
 <img align="left" width="170" src="UVA-med-3.jpg">
-<img align="right" width="150" src="cphg_logo.jpg">
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;</font></a></h2>
+<!--<img align="right" width="150" src="cphg_logo.jpg">-->
+<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -146,7 +146,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: September 26, 2022</p>
+<p align="right">Last modified: July 24, 2024</p>
 </div>
 
 </body></html>
