--- a/people.htm
+++ b/people.htm
@@ -124,8 +124,8 @@ ul.topnav li.icon {display: none;}
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
 <img align="left" width="170" src="UVA-med-3.jpg">
-<img align="right" width="150" src="cphg_logo.jpg">
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;</font></a></h2>
+<!--<img align="right" width="150" src="cphg_logo.jpg">-->
+<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -346,7 +346,14 @@ Grant Atwood is a Second Year undergraduate student (Class of 2026) pursuing Bio
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Emily Nguyen is a First Year undergraduate student (Class of 2027) hoping to major in biochemistry on a pre-med track. I'm excited to apply my background in math to my career in science and learn how to interpret datasets into biomedical information.
 </p><br><br><br><br><br>
-<!--<p style="line-height: 1.6;">
+<!--<h4><font color="#002F6C">Class of 2028</font></h4>
+<p style="line-height: 1.6;">
+<b>Katherine Zhang</b>
+<a href="mailto:zng3sw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Katherine is currently a student at Thomas Jefferson High School for Science and Technology (class of 2024) in Virginia. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
+</p><br><br>
+<p style="line-height: 1.6;">
 <b>Jennifer Wu</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 </p><br>
@@ -359,11 +366,6 @@ Emily Nguyen is a First Year undergraduate student (Class of 2027) hoping to maj
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
 </p><br><br><br>
-<p style="line-height: 1.6;">
-<b>Katherine Zhang</b>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Katherine is currently a student at Thomas Jefferson High School for Science and Technology (class of 2024) in Virginia. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
-</p><br><br>
 <p style="line-height: 1.6;">
 <b>Elizabeth McClung</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
@@ -688,7 +690,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 2, 2024</p>
+<p align="right">Last modified: July 24, 2024</p>
 
 </div>
 
