--- a/position.htm
+++ b/position.htm
@@ -89,8 +89,8 @@ ul.topnav li.icon {display: none;}
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
 <img align="left" width="170" src="UVA-med-3.jpg">
-<img align="right" width="150" src="cphg_logo.jpg">
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;</font></a></h2>
+<!--<img align="right" width="150" src="cphg_logo.jpg">-->
+<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -359,7 +359,7 @@ Take a look at these two videos about why we are excited to be part of the UVA c
 <a href="https://news.virginia.edu/video/charlottesville" target="_blank">"This is Charlottesville."</a>
 </p>
 <hr>
-<p align="right">Last modified: September 6, 2023</p>
+<p align="right">Last modified: July 24, 2024</p>
 </div>
 
 <script>
