--- a/teaching.htm
+++ b/teaching.htm
@@ -106,8 +106,8 @@ ul.topnav li.icon {display: none;}
 <body bgcolor="white" onload="update_modtime();">
 <div style="width: 900px; margin: auto;">
 <img align="left" width="170" src="UVA-med-3.jpg">
-<img align="right" width="150" src="cphg_logo.jpg">
-<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;</font></a></h2>
+<!--<img align="right" width="150" src="cphg_logo.jpg">-->
+<h2 style="font-size: 28pt" align="center"><a href="index.html" style="text-decoration:none;"><font color="#002F6C">Chongzhi Zang Lab&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></a></h2>
 
 <ul class="topnav" id="myTopnav">
   <li><a href="index.htm">Home</a></li>
@@ -139,29 +139,6 @@ ul.topnav li.icon {display: none;}
 <p style="line-height: 1.6;">
 <a href="https://cphg.github.io/compgen/" target="_blank">Spring 2022: Course website</a>
 </p>
-<!--<button type="button" class="collapsible">
-<p style="text-indent:100px; ">Lecture slides</p>
-</button>
-<div class="content">
-<ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
-<li><a href="https://uvahealth.com/findadoctor/profile/todd-w-bauer" target="_blank"><font color="#002F6C">Todd W. Bauer</font></a>, Division of Surgical Oncology, Department of Surgery</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology</li>
-<li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine</li>
-<li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Center for Public Health Genomics</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://www.immunology.virginia.edu/Sun/" target="_blank"><font color="#002F6C">Jie Sun</font></a>, Beirne B. Carter Center for Immunology Research</li>
-<li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology</li>
-<li><a href="https://uvahealth.com/findadoctor/Agnieszka-Swiatecka-Urban-1497816045" target="_blank"><font color="#002F6C">Agnieszka Swiatecka-Urban</font></a>, Department of Pediatric Nephrology</li>
-<li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics</li>
-<li><a href="https://www.cs.virginia.edu/~az9eg/website/lab.html" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science</li>
-<li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology</li>
-(in alphabetical order)
-</p></ul>
-</div>-->
 <hr>
 <h3><font color="#002F6C">BIOC 8014: Chromatin</font></h3>
 <p style="line-height: 1.6;">
@@ -230,7 +207,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: April 22, 2024</p>
+<p align="right">Last modified: July 24, 2024</p>
 </div>
 
 <script>
