--- a/people.htm
+++ b/people.htm
@@ -288,7 +288,7 @@ Kevin is a medical student at UVA expected to graduate in 2026. He received his 
 <b>Jingyi Wang</b>
 <a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program starting summer 2024. She completed her undergraduate degree from UVA with a biochemistry major and a data analytics minor in 3 years. She joined the lab as a Second Year student and will be continuing her PhD studies in the lab. She is interested in investigating genomics problems using computational approaches.
+Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She completed her undergraduate degree from UVA with a biochemistry major and a data analytics minor in 3 years. She joined the lab as a Second Year undergrad student and continued her PhD studies in the lab. She is interested in investigating genomics problems using computational approaches.
 </p><br><br><br>
 <hr>
 <h3><font color="#002F6C">Research Assistant</font></h3>
@@ -307,7 +307,7 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 <b>Andy Cao</b>
 <a href="mailto:kcz3my@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Andy Cao is a Third Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
+Andy Cao is a Fourth Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
 </p><br><br><br><br>
 <!--<p style="line-height: 1.6;">
 <img align="right" src="images/nina_chinnam.jpg" style="width:180px">
@@ -328,7 +328,7 @@ Ibrahim Khanani is a rising Fourth Year student (Class of 2025) studying Compute
 <b>Yanbin Xu</b>
 <a href="mailto:xzy8wd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Yanbin Xu is a Third Year undergraduate student (Class of 2025) pursuing a double major in Neuroscience and Statistics. He is excited to develop and apply bioinformatics algorithms to study genomic problems and learn more about machine learning in precision medicine.
+Yanbin Xu is a Fourth Year undergraduate student (Class of 2025) pursuing a double major in Neuroscience and Statistics. He is excited to develop and apply bioinformatics algorithms to study genomic problems and learn more about machine learning in precision medicine.
 </p><br><br><br>
 <h4><font color="#002F6C">Class of 2026</font></h4>
 <p style="line-height: 1.6;">
@@ -336,7 +336,7 @@ Yanbin Xu is a Third Year undergraduate student (Class of 2025) pursuing a doubl
 <b>Grant Atwood</b>
 <a href="mailto:yha9cf@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Grant Atwood is a Second Year undergraduate student (Class of 2026) pursuing Biomedical Engineering with a minor in Computer Science. He hopes to utilize principles from a wide breadth of fields to further understand the human genome. In his free time, he enjoys watching sports of all varieties.
+Grant Atwood is a Third Year undergraduate student (Class of 2026) pursuing Biomedical Engineering with a minor in Computer Science. He hopes to utilize principles from a wide breadth of fields to further understand the human genome. In his free time, he enjoys watching sports of all varieties.
 </p><br><br><br>
 <h4><font color="#002F6C">Class of 2027</font></h4>
 <p style="line-height: 1.6;">
@@ -344,16 +344,17 @@ Grant Atwood is a Second Year undergraduate student (Class of 2026) pursuing Bio
 <b>Emily Nguyen</b>
 <a href="mailto:zng3sw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Emily Nguyen is a First Year undergraduate student (Class of 2027) hoping to major in biochemistry on a pre-med track. I'm excited to apply my background in math to my career in science and learn how to interpret datasets into biomedical information.
+Emily Nguyen is a Second Year undergraduate student (Class of 2027) hoping to major in biochemistry on a pre-med track. I'm excited to apply my background in math to my career in science and learn how to interpret datasets into biomedical information.
 </p><br><br><br><br><br>
-<!--<h4><font color="#002F6C">Class of 2028</font></h4>
+<h4><font color="#002F6C">Class of 2028</font></h4>
 <p style="line-height: 1.6;">
+<img align="right" src="images/katherine_zhang.jpg" style="width:180px">
 <b>Katherine Zhang</b>
-<a href="mailto:zng3sw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<!--<a href="mailto:zng3sw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a>--><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Katherine is currently a student at Thomas Jefferson High School for Science and Technology (class of 2024) in Virginia. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
+Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high school student at Thomas Jefferson High School for Science and Technology, she spent one summer in the lab to learn computational biology. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
 </p><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <b>Jennifer Wu</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 </p><br>
@@ -401,13 +402,13 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td><b>Yidan Cong, PhD</b></td>
 		<td>PhD in Chemistry, University of North Carolina at Chapel Hill</td>
 		<td>06/2021&ndash;02/2022</td>
-		<td>Data Scientist, Wayfair</td>
+		<td>Machine Learning Engineer, Big Sur AI</td>
 	</tr>
 	<tr>
 		<td><b>Christopher Dampier, MD</b></td>
 		<td>MD, University of Michigan;<br>General Surgery Residency, University of Virginia</td>
 		<td>07/2019&ndash;06/2021</td>
-		<td>Pathology Fellow, National Cancer Institute, NIH</td>
+		<td>Clinical Fellow, National Cancer Institute, NIH</td>
 	</tr>
 	<tr>
 		<td><b>William F. Lamberti, PhD</b></td>
@@ -690,7 +691,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: July 28, 2024</p>
+<p align="right">Last modified: August 2, 2024</p>
 
 </div>
 
