--- a/teaching.htm
+++ b/teaching.htm
@@ -132,6 +132,9 @@ ul.topnav li.icon {display: none;}
 <hr>
 <h3><a href="https://med.virginia.edu/bims/bims-courses/bims-6000-core-course-in-integrative-biosciences/" target="_blank"><font color="#002F6C">BIMS 6000: Core Course in Integrative Biosciences</font></a></h3>
 <p style="line-height: 1.6;">
+	Fall 2024 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="https://youtu.be/ldpmgqn1p5k" target="_blank">[Video]</a> <a href="slides/data_visualization_2024.pdf" target="_blank">[Slides]</a>
+</p>
+<p style="line-height: 1.6;">
 	Fall 2023 Lecture: Visualization and interpretation of high-throughput genomics data. <a href="slides/data_visualization_2023.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
@@ -207,7 +210,7 @@ ul.topnav li.icon {display: none;}
 	</div>
 </div>
 <hr>
-<p align="right">Last modified: July 24, 2024</p>
+<p align="right">Last modified: August 20, 2024</p>
 </div>
 
 <script>
