--- a/people.htm
+++ b/people.htm
@@ -315,14 +315,14 @@ Andy Cao is a Fourth Year undergraduate student (Class of 2025) planning to stud
 <a href="mailto:fhs9af@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Nina Chinnam is a Third Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
-</p><br><br><br><br><br>-->
+</p><br><br><br><br><br>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ibrahim_khanani.jpg" style="width:180px">
 <b>Ibrahim Khanani</b>
 <a href="mailto:scp5qe@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ibrahim Khanani is a rising Fourth Year student (Class of 2025) studying Computer Science with a minor in Computational Biology at Duke University. He is doing summer research in the lab supported by UVA School of Medicine's Summer Research Internship Program (SRIP). He is excited to pursue further studies into the intersection of technology and medicine, with a focus on genomics and gene therapies.
-</p><br><br><br>
+</p><br><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/yanbin_xu.jpg" style="height:180px">
 <b>Yanbin Xu</b>
@@ -396,7 +396,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td><b>Qingying Chen, PhD</b></td>
 		<td>PhD in Physics, University of Tulsa</td>
 		<td>01/2021&ndash;06/2024</td>
-		<td> </td>
+		<td>Research associate, UVA</td>
 	</tr>
 	<tr>
 		<td><b>Yidan Cong, PhD</b></td>
@@ -414,7 +414,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td><b>William F. Lamberti, PhD</b></td>
 		<td>PhD in Computational Sciences and Informatics, George Mason University</td>
 		<td>01/2021&ndash;08/2022</td>
-		<td>Data Scientist, Google</td>
+		<td>Assistant Professor, George Mason University</td>
 	</tr>
 	<tr>
 		<td><b>Zhenjia Wang, PhD</b></td>
@@ -482,7 +482,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<th>Name</th>
 		<th>Background</th>
 		<th>Time at Lab</th>
-		<th>Current Position</th>
+		<th>Position after Leaving Lab</th>
 	</tr>
 	<tr>
 		<td><a href="https://marvinquiet.github.io/" target="_blank"><b>Wenjing Ma</b></a></td>
@@ -504,7 +504,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<th>Name</th>
 		<th>Major</th>
 		<th>Time at Lab</th>
-		<th>Position after graduation</th>
+		<th>Position after Graduation/Leaving Lab</th>
 	</tr>
 	<tr>
 		<td><b>Kuki Davey</b></td>
@@ -541,6 +541,12 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td>Statistics and Biology, Computer Science minor</td>
 		<td>01/2019&ndash;06/2022</td>
 		<td>Medical Student, UVA</td>
+	</tr>
+	<tr>
+		<td><b>Ibrahim Khanani</b></td>
+		<td>SRIP Summer Student; Computer Science, Duke University</td>
+		<td>05/2024&ndash;08/2024</td>
+		<td>Undergraduate Student, Duke University</td>
 	</tr>
 	<tr>
 		<td><b>Zhou Lu</b></td>
@@ -580,7 +586,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 	</tr>
 	<tr>
 		<td><b>Sekou Rowe</b></td>
-		<td><a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">NSF REU</a> Summer Student; Chemical Engineering, Howard University</td>
+		<td><a href="https://engineering.virginia.edu/department/biomedical-engineering/academics/undergraduate-programs/systems-bioengineering-reu" target="_blank">NSF REU</a> Summer Student; Chemical Engineering, Howard University</td>
 		<td>05/2019&ndash;08/2019</td>
 		<td>Undergrad Student in Chemical Engineering, Howard University</td>
 	</tr>
@@ -691,7 +697,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 2, 2024</p>
+<p align="right">Last modified: August 25, 2024</p>
 
 </div>
 
