--- a/publication.htm
+++ b/publication.htm
@@ -150,16 +150,21 @@ Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u
 <br>
 <b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.01.31.525983" target="_blank">https://doi.org/10.1101/2023.01.31.525983</a> (2023)
 </p></li>
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2023.09.13.557622v1" target="_blank">Proximal immune-epithelial progenitor interactions drive chronic tissue sequelae post COVID-19</a><br>
-Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Patcharin Pramoonjago, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
-<br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.09.13.557622" target="_blank">https://doi.org/10.1101/2023.09.13.557622</a> (2023)
-</p></li>
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
 <!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank">An aberrant immune–epithelial progenitor niche drives viral lung sequelae</a><br>
+Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane de Almeida Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Samuel Young, Riley Hannan, Grace Bingham, Mohammed Arish, Arka Sen Chaudhari, Jun sub Im, Cameron L. R. Mattingly, Patcharin Pramoonjago, Alberto Marchesvsky, Jeffrey Sturek, Jacob E. Kohlmeier, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
+<br>
+<i><b>Nature</b></i>, doi: <a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank">10.1038/s41586-024-07926-8</a> (2024)
+</p></li>
+<li><p><a href="https://doi.org/10.1016/j.jneuroim.2024.578402" target="_blank">Toxoplasma gondii infection supports the infiltration of T cells into brain tumors</a><br>
+Yen T.M. Nguyen, Lydia Sibley*, Piotr Przanowski*, Xiao-Yu Zhao*, Michael Kovacs, <u>Shengyuan Wang</u>, Marieke K. Jones, Maureen Cowan, Wenjie Liu, Andrea R. Merchak, Alban Gaultier, Kevin Janes, <u>Chongzhi Zang</u>, Tajie Harris, Sarah E. Ewald<sup>#</sup>, Hui Zong<sup>#</sup>
+<br>
+<i><b>Journal of Neuroimmunology</b></i> 393, 578402 (2024)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41586-023-06877-w" target="_blank">Temporal dynamics of the multi-omic response to endurance exercise training</a><br>
 MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <br>
@@ -168,7 +173,7 @@ MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
 <li><p><a href="https://elifesciences.org/articles/89548" target="_blank">Integrative analysis of DNA replication origins and ORC-/MCM-binding sites in human cells reveals a lack of overlap</a><br>
 <u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
-<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548" target="_blank">https://doi.org/10.7554/eLife.89548</a> (2024)
+<i><b>eLife</b></i>, doi: <a href="https://doi.org/10.7554/eLife.89548" target="_blank">10.7554/eLife.89548</a> (2024)
 </p></li>
 <li><p><a href="https://doi.org/10.1093/nar/gkae164" target="_blank">DNA fragility at topologically associated domain boundaries is promoted by alternative DNA secondary structure and topoisomerase II activity</a><br>
 Heather M. Raimer Young, Pei-Chi Hou, Anna R. Bartosik, Naomi D. Atkin, Lixin Wang, <u>Zhenjia Wang</u>, Aakrosh Ratan, <u>Chongzhi Zang</u>, Yuh-Hwa Wang
@@ -350,7 +355,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="40">
+<ol style="padding-left: 24px; line-height: 1.6;" start="42">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -470,7 +475,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: July 24, 2024</p>
+<p align="right">Last modified: September 4, 2024</p>
 </div>
 
 <script>
