--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">September 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shawn's collaboration work with the Jie Sun Lab is published in <a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank"><i><b>Nature</b></i></a>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">July 2024</font>
 		</p>
 	</div>
@@ -1094,7 +1106,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: July 28, 2024</p>
+<p align="right">Last modified: September 4, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
