--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Chongzhi R35 MIRA grant from NIGMS is renewed for 5 years.
+		<br><br>
 		Shawn's collaboration work with the Jie Sun Lab is published in <a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank"><i><b>Nature</b></i></a>!
 		</p>
 	</div>
@@ -1106,7 +1108,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 4, 2024</p>
+<p align="right">Last modified: September 20, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
