--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Chongzhi receives a School of Medicine Dean's Excellence in Faculty Research Awards.
+		Chongzhi receives a School of Medicine Dean's Excellence in Faculty Research Award.
 		</p>
 	</div>
 </div>
