--- a/research.htm
+++ b/research.htm
@@ -145,6 +145,10 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Research</font></h2>
 <hr>
+<p align="center">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/IjZPVUOs3FM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</p>
+<br>
 <h3><font color="#002F6C">News Releases</font></h3>
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
 <li><a href="https://news.med.virginia.edu/research/new-dna-replication-questions-could-have-implications-for-cancer/" target="_blank">New DNA Replication Questions Could Have Implications for Cancer</a>. <!--UVA Today. -->July 16, 2024</li>
@@ -267,7 +271,7 @@ Data-driven discovery has become a new paradigm in biological research. By analy
 </div>
 </div>
 <hr>
-<p align="right">Last modified: July 24, 2024</p>
+<p align="right">Last modified: October 12, 2024</p>
 
 </div>
 
