--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,12 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Congratulations to Shawn on his appointment as Research Assistant Professor!
+		<br><br>
+		Jingyi, Zhaoxia, Mengxue, Hongpan, Shengyuan, and Shawn give poster presentations at the NIH Histone Modifications and Chromatin Structure Symposium.
+		<br><br>
+		Chongzhi gives a keynote talk at the IX Virginia Soft Matter Workshop held at James Madison University.
+		<br><br>
 		Chongzhi receives a School of Medicine Dean's Excellence in Faculty Research Award.
 		</p>
 	</div>
@@ -1122,7 +1128,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: October 4, 2024</p>
+<p align="right">Last modified: October 24, 2024</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
