--- a/people.htm
+++ b/people.htm
@@ -229,13 +229,13 @@ Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><
 Dr. Chongzhi Zang is an Associate Professor in the Department of Genome Sciences at the University of Virginia and serves as the Director of Computational Genomics at the UVA Comprehensive Cancer Center. He is also affiliated with the Departments of Biochemistry and Molecular Genetics, and Biomedical Engineering. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="https://www.physics.sjtu.edu.cn/en/jsml/zhangjie.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="https://blogs.gwu.edu/wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA in November 2016, he completed his postdoctoral training with <a href="https://liulab-dfci.github.io/" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on developing computational methods for high-throughput omics data analysis and integrative modeling of gene regulation in mammalian cell systems.
 </p><br>
 <hr>
-<h3><font color="#002F6C">Research Scientist</font></h3>
+<h3><font color="#002F6C">Research Faculty</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengen_hu.jpg" style="width:180px">
 <b>Sheng'en Shawn Hu, PhD</b>
 <a href="mailto:sh8tv@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=JwXm75kAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Dr. Sheng'en Shawn Hu is a research scientist after postdoctoral training in the lab. Before joining UVA in November 2017, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
+Dr. Sheng'en Shawn Hu is a Research Assistant Professor after completing his postdoctoral training in the lab. Before joining UVA in November 2017, he received his undergradaute and PhD degree in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Postdoctoral Associates</font></h3>
@@ -309,20 +309,6 @@ Shiyu Jiang joined the lab as a volunteer in January 2023 and became research as
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Andy Cao is a Fourth Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
 </p><br><br><br><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/nina_chinnam.jpg" style="width:180px">
-<b>Nina Chinnam</b>
-<a href="mailto:fhs9af@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Nina Chinnam is a Third Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
-</p><br><br><br><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/ibrahim_khanani.jpg" style="width:180px">
-<b>Ibrahim Khanani</b>
-<a href="mailto:scp5qe@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Ibrahim Khanani is a rising Fourth Year student (Class of 2025) studying Computer Science with a minor in Computational Biology at Duke University. He is doing summer research in the lab supported by UVA School of Medicine's Summer Research Internship Program (SRIP). He is excited to pursue further studies into the intersection of technology and medicine, with a focus on genomics and gene therapies.
-</p><br><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/yanbin_xu.jpg" style="height:180px">
 <b>Yanbin Xu</b>
@@ -338,14 +324,14 @@ Yanbin Xu is a Fourth Year undergraduate student (Class of 2025) pursuing a doub
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Grant Atwood is a Third Year undergraduate student (Class of 2026) pursuing Biomedical Engineering with a minor in Computer Science. He hopes to utilize principles from a wide breadth of fields to further understand the human genome. In his free time, he enjoys watching sports of all varieties.
 </p><br><br><br>
-<h4><font color="#002F6C">Class of 2027</font></h4>
+<!--<h4><font color="#002F6C">Class of 2027</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/emily_nguyen.jpg" style="width:180px">
 <b>Emily Nguyen</b>
 <a href="mailto:zng3sw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Emily Nguyen is a Second Year undergraduate student (Class of 2027) hoping to major in biochemistry on a pre-med track. I'm excited to apply my background in math to my career in science and learn how to interpret datasets into biomedical information.
-</p><br><br><br><br><br>
+</p><br><br><br><br><br>-->
 <h4><font color="#002F6C">Class of 2028</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/katherine_zhang.jpg" style="width:180px">
@@ -354,34 +340,6 @@ Emily Nguyen is a Second Year undergraduate student (Class of 2027) hoping to ma
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high school student at Thomas Jefferson High School for Science and Technology, she spent one summer in the lab to learn computational biology. She is excited to learn about the applications of computer science in the field of biology and hopes to eventually pursue study in the medical field. In her spare time, she enjoys reading, taking walks with her dog, and volunteer tutoring.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
-<b>Jennifer Wu</b>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-</p><br>
-<hr>
-<h3><font color="#002F6C">High School Students</font></h3>
-<p style="line-height: 1.6;">
-<img align="right" src="images/sonnet_xu.jpg" style="width:180px">
-<b>Sonnet Xu</b>
-<a href="mailto:duf7xd@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Sonnet is a current student at Troy High School (class of 2023) in Michigan interested in computational biology and computer science. She looks forward to learning more about gene expression and the epigenetic mechanisms of cancer. In her free time, she likes to hike outside and travel.
-</p><br><br><br>
-<p style="line-height: 1.6;">
-<b>Elizabeth McClung</b>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-UVA Advance 2022 Summer Student, from Rockbridge County High School, Lexington, VA
-</p><br>
-<p style="line-height: 1.6;">
-<b>Riya Shah</b>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-UVA Advance 2022 Summer Student, from Mclean High School, Mclean, VA
-</p><br>
-<p style="line-height: 1.6;">
-<b>Chris Stewart</b>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, VA
-</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
 <h4><font color="#002F6C">Postdoctoral Associates</font></h4>
@@ -697,7 +655,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: August 25, 2024</p>
+<p align="right">Last modified: October 24, 2024</p>
 
 </div>
 
