--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Zhaoxia won a Best Presentation Award at the BMG departmental retreat. Way to go!
+		<br><br>
 		Congratulations to Shawn on his appointment as Research Assistant Professor!
 		<br><br>
 		Jingyi, Zhaoxia, Mengxue, Hongpan, Shengyuan, and Shawn give poster presentations at the NIH Histone Modifications and Chromatin Structure Symposium.
