--- a/index.htm
+++ b/index.htm
@@ -177,6 +177,8 @@ function myFunction() {
 		<br><br>
 		Chongzhi gives a keynote talk at the IX Virginia Soft Matter Workshop held at James Madison University.
 		<br><br>
+		The lab receives a pilot funding award from the UVA Cancer Center's Molecular Genetics and Epigenetics (GEN) program, for the third year!
+		<br><br>
 		Chongzhi receives a School of Medicine Dean's Excellence in Faculty Research Award.
 		</p>
 	</div>
