--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Zhaoxia won a Best Presentation Award at the BMG departmental retreat. Way to go!
+		Zhaoxia won a Best Flash Talk Award at the BMG departmental retreat. Way to go!
 		<br><br>
 		Congratulations to Shawn on his appointment as Research Assistant Professor!
 		<br><br>
