--- a/publication.htm
+++ b/publication.htm
@@ -158,7 +158,7 @@ Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u
 <li><p><a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank">An aberrant immune–epithelial progenitor niche drives viral lung sequelae</a><br>
 Harish Narasimhan*, In Su Cheon*, Wei Qian*, <u>Shengen Shawn Hu</u>*, Tanyalak Parimon*, Chaofan Li, Nick Goplen, Yue Wu, Xiaoqin Wei, Young Min Son, Elizabeth Fink, Gislane de Almeida Santos, Jinyi Tang, Changfu Yao, Lyndsey Muehling, Glenda Canderan, Alexandra Kadl, Abigail Cannon, Samuel Young, Riley Hannan, Grace Bingham, Mohammed Arish, Arka Sen Chaudhari, Jun sub Im, Cameron L. R. Mattingly, Patcharin Pramoonjago, Alberto Marchesvsky, Jeffrey Sturek, Jacob E. Kohlmeier, Yun Michael Shim, Judith Woodfolk, <u>Chongzhi Zang</u><sup>#</sup>, Peter Chen<sup>#</sup>, Jie Sun<sup>#</sup>
 <br>
-<i><b>Nature</b></i>, doi: <a href="https://www.nature.com/articles/s41586-024-07926-8" target="_blank">10.1038/s41586-024-07926-8</a> (2024)
+<i><b>Nature</b></i> 634, 961&ndash;969 (2024)
 </p></li>
 <li><p><a href="https://doi.org/10.1016/j.jneuroim.2024.578402" target="_blank">Toxoplasma gondii infection supports the infiltration of T cells into brain tumors</a><br>
 Yen T.M. Nguyen, Lydia Sibley*, Piotr Przanowski*, Xiao-Yu Zhao*, Michael Kovacs, <u>Shengyuan Wang</u>, Marieke K. Jones, Maureen Cowan, Wenjie Liu, Andrea R. Merchak, Alban Gaultier, Kevin Janes, <u>Chongzhi Zang</u>, Tajie Harris, Sarah E. Ewald<sup>#</sup>, Hui Zong<sup>#</sup>
