--- a/people.htm
+++ b/people.htm
@@ -154,6 +154,15 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
+      <img src="images/20241016.jpg">
+    </li>
+    <li>
+      <img src="images/20240511.jpg">
+    </li>
+    <li>
+      <img src="images/20240419.jpg">
+    </li>
+    <li>
       <img src="images/20230625.jpg">
     </li>
     <li>
@@ -655,7 +664,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: October 24, 2024</p>
+<p align="right">Last modified: November 10, 2024</p>
 
 </div>
 
