--- a/people.htm
+++ b/people.htm
@@ -154,7 +154,7 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
-      <img src="images/20241016.jpg">
+      <img src="images/20241121.jpg">
     </li>
     <li>
       <img src="images/20240511.jpg">
@@ -299,7 +299,21 @@ Kevin is a medical student at UVA expected to graduate in 2026. He received his 
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She completed her undergraduate degree from UVA with a biochemistry major and a data analytics minor in 3 years. She joined the lab as a Second Year undergrad student and continued her PhD studies in the lab. She is interested in investigating genomics problems using computational approaches.
 </p><br><br><br>
-<hr>
+<p style="line-height: 1.6;">
+<img align="right" src="images/bhummanat_sittipongpittaya.jpg" style="width:180px">
+<b>Bhummanat Sittipongpittaya</b>
+<a href="mailto:syv3ap@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Bhummanat Sittipongpittaya is a PhD student in the Biomedical Sciences (BIMS) program. He received his M.S. in Biomedical Engineering from Case Western Reserve University in 2024. He is interested in bioinformatics tools development and computational approaches to address biological questions.
+</p><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/sophie_okeefe.jpg" style="width:180px">
+<b>Sophie O'Keefe</b>
+<a href="mailto:ugp9ke@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Sophie O’Keefe is a PhD student in the Biomedical Sciences (BIMS) program. Prior to joining UVA, she received a B.S in Biology, with a focus in immunology, from the University of Chicago. She then worked as a research assistant at Columbia University studying the role of vascular immune cross-talk in the metastatic progression of pancreatic neuroendocrine tumors. She hopes to improve her computational modeling skills in the context of tumor immunology.
+</p><br><br>
+<!--<hr>
 <h3><font color="#002F6C">Research Assistant</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shiyu_jiang.jpg" style="width:180px">
@@ -307,7 +321,7 @@ Jingyi Wang is a PhD student in the Biomedical Sciences (BIMS) program. She comp
 <a href="mailto:sjiang43@jhu.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=DBJYZiYAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shiyu Jiang joined the lab as a volunteer in January 2023 and became research assistant in July 2023. He received his master’s degree in Computer Science at Johns Hopkins University in December 2023 and previously received B.S. in Computer Science from Wenzhou-Kean University in China. His research interests lie in developing algorithms and tools to solve biological problems. In his free time, he likes to play soccer and spend some time at the gym.
-</p><br><br>
+</p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <h4><font color="#002F6C">Class of 2025</font></h4>
@@ -664,7 +678,7 @@ Katherine Zhang is a First Year undergraduate student (Class of 2028). As a high
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: November 10, 2024</p>
+<p align="right">Last modified: December 14, 2024</p>
 
 </div>
 
