--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,30 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">January 2025</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Zhenjia and Shengyuan's paper on genomic features of transcriptional condensates is accepted to <i><b>Nucleic Acids Research</b></i>!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
+		<font color="#002F6C">November 2024</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Chongzhi receives a School of Medicine Dean’s Award for Excellence in Research. See <a href="https://news.med.virginia.edu/faculty/faculty-awards-ceremony-celebrates-outstanding-faculty-achievements/" target="_blank"><b>news report</b> here</a>.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">October 2024</font>
 		</p>
 	</div>
@@ -178,8 +202,6 @@ function myFunction() {
 		Chongzhi gives a keynote talk at the IX Virginia Soft Matter Workshop held at James Madison University.
 		<br><br>
 		The lab receives a pilot funding award from the UVA Cancer Center's Molecular Genetics and Epigenetics (GEN) program, for the third year!
-		<br><br>
-		Chongzhi receives a School of Medicine Dean's Excellence in Faculty Research Award.
 		</p>
 	</div>
 </div>
@@ -1132,7 +1154,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: October 24, 2024</p>
+<p align="right">Last modified: January 3, 2025</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
