--- a/index.htm
+++ b/index.htm
@@ -170,6 +170,8 @@ function myFunction() {
 	<div class="column right">
 		<p>
 		Zhenjia and Shengyuan's paper on genomic features of transcriptional condensates is accepted to <i><b>Nucleic Acids Research</b></i>!
+		<br><br>
+		The lab welcomes BIMS rotation students Sophie O'Keefe and Bhummanat Sittipongpittaya!
 		</p>
 	</div>
 </div>
