--- a/publication.htm
+++ b/publication.htm
@@ -143,7 +143,12 @@ function myFunction() {
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2023.06.18.545510v1" target="_blank">Spatially clustered pattern of transcription factor binding reveals phase-separated transcriptional condensates at super-enhancers</a><br>
 <u>Zhenjia Wang</u>, <u>Shengyuan Wang</u>, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.06.18.545510" target="_blank">https://doi.org/10.1101/2023.06.18.545510</a> (2023)
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.06.18.545510" target="_blank">https://doi.org/10.1101/2023.06.18.545510</a> (2023); <i><b>Nucleic Acids Research</b></i>, in press (2025)
+</p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2024.12.18.629220v1" target="_blank">Regulation of epigenetics and chromosome structure by human ORC2</a><br>
+Zhangli Su*, <u>Mengxue Tian</u>*, Etsuko Shibata, Yoshiyuki Shibata, Tianyi Yang, <u>Zhenjia Wang</u>, Fulai Jin, <u>Chongzhi Zang</u><sup>#</sup>, Anindya Dutta<sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2024.12.18.629220" target="_blank">https://doi.org/10.1101/2024.12.18.629220</a> (2024)
 </p></li>
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2023.01.31.525983v2" target="_blank">Perturb-tracing enables high-content screening of multiscale 3D genome regulators</a><br>
 Yubao Cheng, Mengwei Hu, Bing Yang, Tyler B. Jensen, Tianqi Yang, Ruihuan Yu, <u>Zhaoxia Ma</u>, Jonathan S. D. Radda, Shengyan Jin, <u>Chongzhi Zang</u>, Siyuan Wang
@@ -475,7 +480,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 4, 2024</p>
+<p align="right">Last modified: January 14, 2025</p>
 </div>
 
 <script>
